--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,9 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Welcome to proshop</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <title>Welcome to Calorie Hiest</title>
 </head>
 
 <body>
@@ -26,7 +28,11 @@
     crossorigin="anonymous"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- a -->
 
+  <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
 </body>
 
 </html>
